Fix white space

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,11 @@
 .body {
   display: flex;
   flex-direction: column;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   font-family: "Poppins", sans-serif;
 }
 
